[tool.poetry]
name = "LanguageStatisticsLibPy"
version = "1.0.3"
description = "Quick and robust Python functions to do cryptanalysis using language statistics data for 15 languages"
readme = "README.md"
authors = ["Nils Kopal and Bernhard Esslinger <kopal@cryptool.org>"]
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
Homepage = "https://github.com/CrypToolProject/LanguageStatisticsLibPy"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
dependencies = [
     "numpy==2.2.1"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"